--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Install dependencies
       run: bundle install
 
+    - name: Output Fastlane environment
+      run: bundle exec fastlane env
+
     - name: Run Fastlane
       env:
         APPLE_ID: ${{ secrets.APPLE_ID }}
@@ -43,4 +46,5 @@ jobs:
         TEAM_ID: ${{ secrets.TEAM_ID }}
         MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+        MATCH_GIT_PASSWORD: ${{ secrets.MATCH_GIT_PASSWORD }}
       run: bundle exec fastlane beta
