--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Output Fastlane environment
       run: bundle exec fastlane env
 
+    - name: fastlane beta --verbose
+    run: bundle exec fastlane beta --verbose
+
     - name: Run Fastlane
       env:
         APPLE_ID: ${{ secrets.APPLE_ID }}
