chore: master 브랜치 push 및 merge 하는 case 대응(AppStore 배포)

--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - develop
+      - master
   pull_request:
     branches:
       - main
       - develop
+      - master
 
 jobs:
   fastlane:
@@ -53,3 +55,23 @@ jobs:
         APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
         APP_STORE_CONNECT_API_KEY_CONTENT: ${{ secrets.APP_STORE_CONNECT_API_KEY_CONTENT }}
       run: bundle exec fastlane upload_testflight
+
+    - name: Run release_app_store on master
+      if: github.ref == 'refs/heads/master'
+      env:
+        APPLE_ID: ${{ secrets.APPLE_ID }}
+        APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+        FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
+        SLACK_URL: ${{ secrets.SLACK_URL }}
+        FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+        APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+        ITC_TEAM_ID: ${{ secrets.ITC_TEAM_ID }}
+        TEAM_ID: ${{ secrets.TEAM_ID }}
+        GIT_PERSONAL_TOKEN: ${{ secrets.GIT_PERSONAL_TOKEN }}
+        MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+        MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+        MATCH_GIT_PASSWORD: ${{ secrets.MATCH_GIT_PASSWORD }}
+        APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}
+        APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
+        APP_STORE_CONNECT_API_KEY_CONTENT: ${{ secrets.APP_STORE_CONNECT_API_KEY_CONTENT }}
+      run: bundle exec fastlane release_app_store
