chore: Fastfile 주석 추가 및 .yml파일 조건부 변경

--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -38,6 +38,7 @@ jobs:
       run: bundle exec fastlane env
 
     - name: Run upload_testflight
+      if: github.ref == 'refs/heads/develop'
       env:
         APPLE_ID: ${{ secrets.APPLE_ID }}
         APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
